first part done

--- a/src/components/cards/chart.module.css
+++ b/src/components/cards/chart.module.css
@@ -19,8 +19,8 @@
 
 .socialIcons {
     display: flex;
-    justify-content: flex-start;
-    padding-left: 90px;
+    padding-left: 65px;
+    color: red;
 }
   
 .socialIcons a {
