--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,57 +1,104 @@
 
 
+/* Footer Styles */
 .footer {
     background-color: #333;
     color: #fff;
     padding: 40px 0;
-}
+  }
   
-.footerContent {
+  .footerContent {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-}
+    flex-wrap: wrap;
+  }
   
-.footerSection{
+  .footerSection {
     padding: 0 20px;
-}
+    flex-basis: 25%;
+    margin-bottom: 30px;
+  }
   
-.footerSection h3 {
+  .footerSection h3 {
     font-size: 18px;
     margin-bottom: 10px;
-}
+  }
   
-.footerSection p,
-.footerSection ul {
+  .footerSection p,
+  .footerSection ul {
     font-size: 14px;
     line-height: 1.5;
-}
+  }
   
-.footerSection ul {
+  .footerSection ul {
     list-style: none;
     padding: 0;
-}
-
-
-.socialIcon {
+  }
+  
+  .socialIcon {
     padding-right: 55px;
     color: black;
-}
+  }
   
-.socialIcon a {
+  .socialIcon a {
     display: inline-block;
     margin-right: 10px;
     font-size: 18px;
     color: #fff;
     text-decoration: none;
     transition: color 0.3s ease;
-}
+  }
   
-.socialIcon a:hover {
+  .socialIcon a:hover {
     color: #ccc;
-}
-
-
-
+  }
+  
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+    .footerContent {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .footerSection {
+      flex-basis: auto;
+      text-align: center;
+    }
+  
+    .socialIcon {
+      padding-right: 20px;
+      margin-top: 20px;
+    }
+  }
+  
+  @media (min-width: 769px) and (max-width: 1200px) {
+    .footerContent {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  
+    .footerSection {
+      flex-basis: 33.33%;
+    }
+  
+    .socialIcon {
+      padding-right: 30px;
+    }
+  }
+  
+  @media (min-width: 1201px) {
+    .footerContent {
+      justify-content: space-between;
+    }
+  
+    .footerSection {
+      flex-basis: 25%;
+    }
+  
+    .socialIcon {
+      padding-right: 55px;
+    }
+  }
   
