--- a/src/components/cards/chart.module.css
+++ b/src/components/cards/chart.module.css
@@ -1,36 +1,101 @@
-
-
-.Chart{
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #f5f5f5;
+  }
+  
+  /* Chart Styles */
+  .Chart {
     padding-top: 20px;
     margin: 100px auto;
     width: 27%;
     height: 350px;
-    /* background-color: red; */
     box-shadow: 0px 3px 5px #ccc;
     margin-bottom: 40px;
     text-align: center;
-}
-
-.Chart img{
+  }
+  
+  .Chart img {
     width: 50%;
     height: 50%;
-    
-}
-
-.socialIcons {
+  }
+  
+  .socialIcons {
     display: flex;
     padding-left: 65px;
     color: red;
-}
+  }
   
-.socialIcons a {
+  .socialIcons a {
     display: inline-block;
     font-size: 18px;
     color: gray;
     text-decoration: none;
     transition: color 0.3s ease;
-}
+  }
   
-.socialIcons a:hover {
+  .socialIcons a:hover {
     color: #ccc;
-}
+  }
+  
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+    .Chart {
+      width: 90%;
+      height: auto;
+      padding: 20px;
+      box-sizing: border-box;
+      margin: 50px auto;
+    }
+  
+    .Chart img {
+      width: 80%;
+      height: auto;
+    }
+  
+    .socialIcons {
+      padding-left: 0;
+      justify-content: center;
+    }
+  }
+  
+  @media (min-width: 769px) and (max-width: 1200px) {
+    .Chart {
+      width: 80%;
+      height: auto;
+      padding: 20px;
+      box-sizing: border-box;
+      margin: 75px auto;
+    }
+  
+    .Chart img {
+      width: 70%;
+      height: auto;
+    }
+  
+    .socialIcons {
+      padding-left: 40px;
+    }
+  }
+  
+  @media (min-width: 1201px) {
+    .Chart {
+      width: 27%;
+      height: 350px;
+      margin: 100px auto;
+    }
+  
+    .Chart img {
+      width: 50%;
+      height: 50%;
+    }
+  
+    .socialIcons {
+      padding-left: 65px;
+    }
+  }
+  
