--- a/src/components/navbor/test.module.css
+++ b/src/components/navbor/test.module.css
@@ -1,44 +1,91 @@
-
-
-
-
+/* Navigation Styles */
 nav {
     background-color: #333;
     color: #fff;
-    padding: 2px 100px 2px 0px;
-} 
-
-h2{
-    padding-right: 700px;
-}
-
-.Container {
-    margin: 0 auto;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     
-} 
-
-
-
-.navMenu {
+  }
+  
+  h2 {
+    padding: 20px;
+    /* padding-right: 200px; */
+    margin: 0;
+    font-size: 24px;
+  }
+  
+  .navMenu {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     list-style: none;
-
-}
-
-.navMenu li {
+    margin: 0;
+  }
+  
+  .navMenu li {
     margin-left: 20px;
-}
-
-.navMenu li a {
+    padding-left: 200px;
+  }
+  
+  .navMenu li a {
     color: #fff;
     text-decoration: none;
     font-size: 16px;
-    transition: color 0.3s ;
-
-}
-
-.navMenu li a:hover {
+    transition: color 0.3s;
+    
+  }
+  
+  .navMenu li a:hover {
     color: #ccc;
-}
+  }
+  
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+    nav {
+      padding: 10px;
+    }
+  
+    .logo h2 {
+      font-size: 20px;
+    }
+  
+    .navMenu {
+      flex-direction: column;
+      align-items: flex-end;
+    }
+  
+    .navMenu li {
+      margin: 10px 0;
+    }
+  }
+  
+  @media (min-width: 769px) and (max-width: 1200px) {
+    nav {
+      padding: 10px 50px;
+    }
+  
+    .logo h2 {
+      font-size: 22px;
+    }
+  
+    .navMenu li {
+      margin-left: 15px;
+    }
+  }
+  
+  @media (min-width: 1201px) {
+    nav {
+      padding: 10px 100px 10px 0;
+    }
+  
+    .logo h2 {
+      font-size: 24px;
+    }
+  
+    .navMenu li {
+      margin-left: 20px;
+    }
+  }
+  
